Fixing search box on Mobile Version

--- a/src/components/layouts/NavbarMobile.module.css
+++ b/src/components/layouts/NavbarMobile.module.css
@@ -121,3 +121,7 @@
 .actionBtn :global(.btn){
   color: var(--bs-white);
 }
+.searchIcon{
+  width: 25px;
+  height: 25px
+}
